# SubtitleForge

./: .gitignore  README.md  USAGE_GUIDE.md  build.bat  build_spec.py  pyproject.toml  requirements.txt  setup.py
plugins/: json_output.py
src/: __init__.py  config.py  gui.py  main.py
src/api/: __init__.py  job_manager.py  models.py  plugin_system.py  routes.py  server.py  websocket.py
src/core/: __init__.py  audio_extractor.py  batch_processing.py  checkpoint.py  models.py  subtitle_generator.py
src/diarization/: __init__.py  speaker_diarizer.py
src/transcription/: __init__.py  whisper_transcriber.py
src/translation/: __init__.py  translator.py
tests/: test_api_auth.py  test_batch.py  test_checkpoint.py  test_core.py  test_glossary_cli.py  test_integration.py  test_json_plugin.py  test_quality.py  test_translation.py
